--- a/src/2023/16/package.json
+++ b/src/2023/16/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "05",
+  "name": "06",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
